[tool.poetry]
name = "mpesasync"
version = "0.1.4"
description = "A Mpesa Daraja API library to quickly get started sending and receiving money from mpesa "
authors = ["Pius Dan <npiusdan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Piusdan/mpesasync"
maintainers = ["Pius Dan(darklotus) <npiusdan@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "mpesasync", from = "src" },
]
exclude = ["*tests*"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Piusdan/mpesasync/issues"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
cryptography = "^36.0.1"
httpx = "^0.19.0"
pydantic = "^1.8.2"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-raises = "^0.11"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
